--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   },
   "keywords": [],
   "author": {
-    "name":"CaiYusen",
-    "email":"cai_ys@qq.com"
+    "name": "CaiYusen",
+    "email": "cai_ys@qq.com"
   },
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/Ba5sx1a0sen1/qq-music-demo/issues"
   },
-  "homepage": "https://github.com/Ba5sx1a0sen1/qq-music-demo#readme"
+  "homepage": "https://github.com/Ba5sx1a0sen1/qq-music-demo#readme",
+  "dependencies": {
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
+  }
 }
