--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "QQ Music",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dist": "node-sass --output-style compressed scss/app.scss > dist/app.css && autoprefixer-cli -b \"last 2 versions\" -o dist/app.css dist/app.css  && webpack -p"
   },
   "repository": {
     "type": "git",
@@ -21,9 +21,16 @@
   },
   "homepage": "https://github.com/Ba5sx1a0sen1/qq-music-demo#readme",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-preset-env": "^1.7.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "webpack": "^4.20.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.1.2"
   }
 }
